Make build script work!

--- a/helloworld.html
+++ b/helloworld.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="example"></div>
-    <script type="text/babel" src="build/helloworld.js"></script>
+    <script type="text/babel" src="src/helloworld.js"></script>
   </body>
 </html>
